fixed issues with alignment and white space when the scren sizes changed

--- a/src/pages/Skills/Skills.module.css
+++ b/src/pages/Skills/Skills.module.css
@@ -61,13 +61,15 @@
 
 @media (max-width: 600px) {
     .skillcards {
-        display: flex;
-        flex-direction: column;
-        height: 125rem
+        width: 100%;
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* height: 125rem */
+
     }
 
     .heading {
-        left: 0;
+        padding: 0;
     }
 }
 
